<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="sub">Submit</string>
    <string name="CustAcc">Customer Account Creation</string>

    <string name="UserName">Username*</string>
    <string name="Password">Password*</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="EmailAddress">Email*</string>
    <string name="PhoneNum">Phone</string>
    <string name="altPhoneNum">Alt. Phone</string>
    <string name="app_name">ConnectaTech</string>
</resources>
