<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Layout1">

    <ScrollView android:layout_width="fill_parent" android:layout_height="475dp" android:id="@+id/scrollView"
                android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="750dp">

            <TextView
                    android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/CustAcc"
                    android:id="@+id/textView4" android:background="#ffbebebe" android:phoneNumber="false"
                    android:gravity="center_vertical|center_horizontal" android:height="55dp" android:enabled="false"
                    android:textStyle="bold" android:typeface="normal" android:layout_weight="0.09" android:textSize="22dp"
                    android:textColor="#0066FF" android:layout_gravity="center_horizontal" android:layout_column="0"
                    android:width="1000dp" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/FirstName"
                    android:id="@+id/textView5"
                    android:height="55dp" android:width="130dp" android:textSize="22sp" android:gravity="center_vertical|center_horizontal"
                    android:layout_below="@+id/textView4" android:background="#f4f4f4f4"
                    android:autoText="false" android:visibility="visible" android:phoneNumber="false"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editText" android:layout_below="@+id/textView4" android:layout_toRightOf="@+id/textView5"
                    android:width="55dp" android:visibility="visible" android:layout_alignBottom="@+id/textView5"
                    android:typeface="normal" android:layout_alignParentRight="true" android:background="#ffffffff"
                    android:autoText="true" android:textSize="22dp" android:gravity="center_vertical|center_horizontal"/>

            <TextView
                    android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/LastName"
                    android:id="@+id/textView8" android:height="55dp" android:width="130dp" android:textSize="22dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:background="#f4f4f4f4" android:autoText="false" android:visibility="visible"
                    android:phoneNumber="false" android:layout_below="@+id/textView5" android:layout_alignParentLeft="true"/>
            <EditText
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:inputType="textPersonName" android:ems="10" android:id="@+id/editText3"
                    android:width="55dp"
                    android:visibility="visible" android:typeface="normal"
                    android:background="#ffffffff" android:autoText="true"
                    android:textSize="22dp" android:gravity="center_vertical|center_horizontal"
                    android:layout_alignTop="@+id/textView8" android:layout_toRightOf="@+id/textView8"
                    android:layout_alignBottom="@+id/textView8" android:layout_alignRight="@+id/editText"/>
            <TextView
                    android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/EmailAddress"
                    android:id="@+id/textView9" android:height="55dp" android:width="130dp" android:textSize="22dp"
                    android:gravity="center_vertical|center_horizontal" android:background="#f4f4f4f4"
                    android:autoText="false" android:visibility="visible" android:phoneNumber="false"
                    android:layout_below="@+id/textView8" android:layout_alignParentLeft="true"/>
            <EditText
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:inputType="textPersonName" android:ems="10" android:id="@+id/editText4" android:width="55dp"
                    android:visibility="visible" android:typeface="normal" android:background="#ffffffff"
                    android:autoText="true" android:textSize="15dp" android:gravity="center_vertical|center_horizontal"
                    android:layout_alignTop="@+id/textView9"
                    android:layout_alignBottom="@+id/textView9" android:layout_toRightOf="@+id/textView9"
                    android:layout_alignRight="@+id/editText3"/>
            <TextView
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/PhoneNum" android:id="@+id/textView" android:height="55dp"
                    android:width="130dp" android:textSize="22dp" android:gravity="center_vertical|center_horizontal"
                    android:background="#f4f4f4f4" android:autoText="false" android:visibility="visible"
                    android:phoneNumber="false" android:layout_below="@+id/textView9" android:layout_alignParentLeft="true"/>
            <EditText
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:inputType="textPersonName" android:ems="10" android:id="@+id/editText2" android:width="55dp"
                    android:visibility="visible" android:typeface="normal" android:background="#ffffffff"
                    android:autoText="true" android:textSize="22dp" android:gravity="center_vertical|center_horizontal"
                    android:layout_below="@+id/textView9" android:layout_toRightOf="@+id/textView"
                    android:layout_alignBottom="@+id/textView" android:layout_alignParentRight="true"/>
            <TextView
                    android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/altPhoneNum"
                    android:id="@+id/textView2" android:height="55dp" android:width="130dp" android:textSize="22dp"
                    android:gravity="center_vertical|center_horizontal" android:background="#f4f4f4f4"
                    android:autoText="false" android:visibility="visible" android:phoneNumber="false"
                    android:layout_below="@+id/textView" android:layout_alignParentLeft="true"/>
            <EditText
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:inputType="textPersonName" android:ems="10" android:id="@+id/editText5" android:width="55dp"
                    android:visibility="visible" android:typeface="normal" android:background="#ffffffff"
                    android:autoText="true" android:textSize="22dp" android:gravity="center_vertical|center_horizontal"
                    android:layout_below="@+id/textView"
                    android:layout_alignRight="@+id/editText2" android:layout_alignBottom="@+id/textView2"
                    android:layout_toRightOf="@+id/textView2"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/black" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/UserName" android:id="@+id/textView3" android:height="55dp"
                      android:width="130dp" android:textSize="22sp" android:gravity="center_vertical|center_horizontal"
                      android:background="#f4f4f4f4" android:autoText="false"
                      android:visibility="visible" android:phoneNumber="false" android:layout_below="@+id/textView2"
                      android:layout_alignParentLeft="true"/>
            <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:inputType="textPersonName" android:ems="10" android:id="@+id/editText6"
                      android:width="55dp" android:visibility="visible"
                      android:typeface="normal" android:background="#ffffffff"
                      android:autoText="true" android:textSize="22dp"
                      android:gravity="center_vertical|center_horizontal" android:layout_below="@+id/editText5"
                      android:layout_toRightOf="@+id/textView2" android:layout_alignBottom="@+id/textView3"
                      android:layout_alignRight="@+id/editText5"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:text="@string/Password" android:id="@+id/textView6" android:height="55dp"
                      android:width="130dp" android:textSize="22sp" android:gravity="center_vertical|center_horizontal"
                      android:background="#f4f4f4f4" android:autoText="false" android:visibility="visible"
                      android:phoneNumber="false"
                      android:layout_below="@+id/textView3" android:layout_alignParentLeft="true"/>
            <EditText android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:inputType="textPassword" android:ems="10" android:id="@+id/editText8"
                      android:width="55dp" android:visibility="visible" android:typeface="normal"
                      android:background="#ffffffff" android:autoText="true" android:textSize="22dp"
                      android:gravity="center_vertical|center_horizontal"
                      android:layout_below="@+id/editText6" android:layout_toRightOf="@+id/textView6"
                      android:layout_alignBottom="@+id/textView6" android:layout_alignRight="@+id/editText6"/>
        </RelativeLayout>
    </ScrollView>
    <Button

            android:id="@+id/button3" android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:background="#0099FF" android:text="@string/sub" android:textColor="#FFFFFF"
            android:width="130dp" android:visibility="visible" android:textSize="22dp"
            android:gravity="center_vertical|clip_horizontal|center_horizontal"
            android:height="55dp"
            android:layout_alignParentRight="true" android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"/>

</RelativeLayout>
